<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingStart="@dimen/std_screen_insets"
    android:paddingTop="@dimen/std_vertical_margin"
    android:paddingEnd="@dimen/std_screen_insets"
    android:weightSum="1"
    tools:context=".MainActivity">

    <TextView
        style="@style/back_button"
        android:text="@string/back_button" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/std_vertical_margin"
        android:gravity="center"
        android:text="@string/registration_username"
        android:textAppearance="@style/Text" />

    <androidx.appcompat.widget.AppCompatEditText
        style="@style/Edit_Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_vertical_margin_half"
        tools:text="@string/username_here" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/std_vertical_margin"
        android:gravity="center"
        android:text="@string/registration_username"
        android:textAppearance="@style/Text" />

    <androidx.appcompat.widget.AppCompatEditText
        style="@style/Edit_Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_vertical_margin_half"
        tools:text="@string/username_here" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/std_vertical_margin"
        android:gravity="center"
        android:text="@string/registration_password"
        android:textAppearance="@style/Text" />

    <androidx.appcompat.widget.AppCompatEditText
        style="@style/Edit_Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_vertical_margin_half"
        android:inputType="textPassword"
        tools:text="sometext" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/std_vertical_margin"
        android:gravity="center"
        android:text="@string/repeat_password"
        android:textAppearance="@style/Text" />

    <androidx.appcompat.widget.AppCompatEditText
        style="@style/Edit_Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_vertical_margin_half"
        android:inputType="textPassword"
        tools:text="sometext" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/Button_Login_Register"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/std_vertical_margin"
        android:text="@string/button_register" />

</androidx.appcompat.widget.LinearLayoutCompat>