<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".ui.login.LoginFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/std_screen_insets" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/std_screen_insets" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/userNameActionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/username_text"
        android:textAppearance="@style/Action_text"
        app:layout_constraintBottom_toTopOf="@+id/userNameInput"
        app:layout_constraintStart_toStartOf="@+id/gdStart" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/userNameInput"
        style="@style/Edit_Text"
        android:layout_marginTop="220dp"
        android:hint="@string/username_here"
        app:layout_constraintBottom_toTopOf="@+id/passwordInput"
        app:layout_constraintEnd_toStartOf="@+id/gdEnd"
        app:layout_constraintStart_toStartOf="@+id/gdStart"
        app:layout_constraintTop_toTopOf="@+id/gdTop"
        tools:text="@string/username_here" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/passwordActionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/password_text"
        android:textAppearance="@style/Action_text"
        app:layout_constraintBottom_toTopOf="@+id/passwordInput"
        app:layout_constraintStart_toStartOf="@+id/passwordInput" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/passwordInput"
        style="@style/Edit_Text"
        android:layout_marginTop="44dp"
        android:hint="@string/password_here"
        android:inputType="textPassword"
        app:layout_constraintEnd_toStartOf="@+id/gdEnd"
        app:layout_constraintStart_toStartOf="@+id/gdStart"
        app:layout_constraintTop_toBottomOf="@+id/userNameInput"
        app:layout_constraintBottom_toTopOf="@id/loginButton"
        tools:text="@string/password_here" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        style="@style/Login_Register_Button"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:text="@string/button_text"
        app:layout_constraintBottom_toTopOf="@+id/haveAccView"
        app:layout_constraintEnd_toStartOf="@+id/gdEnd"
        app:layout_constraintStart_toStartOf="@id/gdStart"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/haveAccView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/login_screen_dont_t_have_an_account"
        android:textAppearance="@style/login_screen_have_acc"
        app:layout_constraintEnd_toStartOf="@+id/gdEnd"
        app:layout_constraintStart_toStartOf="@+id/gdStart"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/registerBtnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/register"
        android:textAppearance="@style/Register_text"
        app:layout_constraintEnd_toStartOf="@+id/gdEnd"
        app:layout_constraintStart_toStartOf="@+id/gdStart"
        app:layout_constraintTop_toBottomOf="@+id/haveAccView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>







