<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/std_screen_insets" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/std_screen_insets" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/userNameActionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_text"
        android:textAppearance="@style/Action_text"
        app:layout_constraintBottom_toTopOf="@+id/userNameInput"
        app:layout_constraintStart_toStartOf="@+id/gdStart" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/userNameInput"
        style="@style/Edit_Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/passwordInput"
        app:layout_constraintEnd_toStartOf="@+id/gdEnd"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/gdStart"
        app:layout_constraintTop_toTopOf="@+id/gdTop"
        app:layout_constraintVertical_bias="0.35"
        tools:text="@string/username_here" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/passwordActionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_text"
        android:textAppearance="@style/Action_text"
        app:layout_constraintBottom_toTopOf="@+id/passwordInput"
        app:layout_constraintStart_toStartOf="@+id/passwordInput" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/passwordInput"
        style="@style/Edit_Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toStartOf="@+id/gdEnd"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/gdStart"
        tools:text="@string/login_screen_password_here" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        style="@style/Button_Login_Register"
        android:layout_width="0dp"
        android:layout_marginBottom="180dp"
        android:text="@string/button_text"
        app:layout_constraintBottom_toTopOf="@+id/haveAccView"
        app:layout_constraintEnd_toStartOf="@+id/gdEnd"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/gdStart" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/haveAccView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_screen_dont_t_have_an_account"
        android:textAppearance="@style/login_screen_have_acc"
        app:layout_constraintBottom_toTopOf="@+id/RegisterView"
        app:layout_constraintEnd_toStartOf="@+id/gdEnd"
        app:layout_constraintStart_toStartOf="@+id/gdStart" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/RegisterView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAppearance="@style/Action_text"
        app:layout_constraintBottom_toTopOf="@+id/gdBottom"
        app:layout_constraintEnd_toStartOf="@+id/gdEnd"
        app:layout_constraintStart_toStartOf="@+id/gdStart" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/screen_inset_top" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/screen_inset_bottom" />

</androidx.constraintlayout.widget.ConstraintLayout>







